--- a/HeroHeader/kreed.css
+++ b/HeroHeader/kreed.css
@@ -6,7 +6,7 @@
     --br-11xs: 2px;
     --br-12xl: 31px;
 }
-.background {
+html {
     position: absolute;
     top: 0;
     left: 0;
@@ -48,4 +48,37 @@ flex-direction: column;
     text-transform: uppercase;
     display: flex;
     align-items: flex-end;
+}
+#pumpkin{
+}
+#scroll{
+    position: absolute;
+    border-radius: var(--br-12xl);top: -1px;
+    left: -1px;
+    border: 2px solid var(--light);
+    box-sizing: border-box;
+    width: 36px;
+    height: 56px;
+    top: 10px;
+    left: 16px;
+    width: 2px;
+    height: 10px;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    width: 34px;
+    height: 54px;
+    top: 67px;
+    left: 0;
+    line-height: 120%;
+    display: inline-block;
+    width: 74px;
+    position: absolute;
+    top: 687px;
+    left: 683px;
+    width: 74px;
+    height: 83px;
+    text-align: center;
+    font-size: 13px;
+    color: var(--light);
 }
