--- a/HeroHeader/kreed.css
+++ b/HeroHeader/kreed.css
@@ -11,8 +11,10 @@
     position: absolute;
     top: 0;
     left: 417.25px;
-    width: 1022.75px;
-    height: 954px;
+    width: 600px;
+    height: 600px;
+    margin-left: 200px;
+    margin-top: 100px;
   }
   .ghost-in-the,
   .lorem-ipsum-dolor {
@@ -199,10 +201,11 @@
   .login,
   .login1 {
     position: absolute;
+    left: -60px;
   }
   .login1 {
     top: 26.19%;
-    left: 36.15%;
+    left: -15px;
     font-weight: 500;
   }
   .login {
