--- a/HeroHeader/kreed2.css
+++ b/HeroHeader/kreed2.css
@@ -1,3 +1,34 @@
+/*
+Font-sizes in em/rem
+Element width in % of vw
+left, right margin en padding %
+flexbox
+*/
+
+/* ---- FONTS ---- */
+/* 
+font-family:;
+font-family:;
+font-family:;
+*/
+
+/* ---- COLORS ---- */
+/* 
+color:;
+color:; 
+color:;
+*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
 .background {
     position: absolute;
     top: 0;
@@ -256,14 +287,3 @@
     --br-12xl: 31px;
   }
   
-  @media(min-width:375px){
-
-  }
-
-@media(min-width:768px){
-    
-  }
-
-@media(min-width:1440px){
-    
-  }
