--- a/HeroHeader/kreed.css
+++ b/HeroHeader/kreed.css
@@ -1,290 +1,111 @@
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: linear-gradient(136.16deg, rgba(91, 135, 75, 0.76), #0c3720);
-  box-shadow: 26px 24px 90px rgba(87, 183, 171, 0.19);
-  width: 1440px;
-  height: 1440px;
-}
-
-.skull-icon {
-  position: absolute;
-  top: 0;
-  left: 417.25px;
-  width: 600px;
-  height: 600px;
-  margin-left: 200px;
-  margin-top: 100px;
-}
-
-.ghost-in-the,
-.lorem-ipsum-dolor {
-  position: absolute;
-  width: 100%;
-  left: 0;
-}
-
-.ghost-in-the {
-  top: calc(50% - 137px);
-  text-transform: uppercase;
-  display: flex;
-  align-items: flex-end;
-}
-
-.lorem-ipsum-dolor {
-  top: calc(50% + 65px);
-  font-size: 16px;
-  color: rgba(255, 255, 255, 0.7);
-  display: inline-block;
-}
-
-.text {
-  position: absolute;
-  width: 37.5%;
-  top: calc(50% - 190px);
-  right: 51.04%;
-  left: 11.46%;
-  height: 274px;
-  font-size: 64px;
-}
-
-.button1,
-.watch-now {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.button1 {
-  border-radius: var(--br-11xs);
-  background-color: #06331b;
-  width: 200px;
-  height: 60px;
-}
-
-.watch-now {
-  font-weight: 500;
-}
-
-.play-sign-icon {
-  position: absolute;
-  height: 85.71%;
-  width: 16.37%;
-  top: 4.91%;
-  right: 0;
-  bottom: 9.38%;
-  left: 83.63%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-}
-
-.button,
-.watch-now-button {
-  position: absolute;
-  top: 20px;
-  left: 45px;
-  width: 109.97px;
-  height: 21px;
-}
-
-.button {
-  top: 544px;
-  left: 165px;
-  width: 200px;
-  height: 60px;
-  text-align: center;
-}
-
-.klik-icon,
-.round {
-  position: absolute;
-  border-radius: var(--br-12xl);
-}
-
-.round {
-  top: -1px;
-  left: -1px;
-  border: 2px solid var(--light);
-  box-sizing: border-box;
-  width: 36px;
-  height: 56px;
-}
-
-.klik-icon {
-  top: 10px;
-  left: 16px;
-  width: 2px;
-  height: 10px;
-}
-
-.cpu-mouse {
-  position: absolute;
-  top: 0;
-  left: 20px;
-  width: 34px;
-  height: 54px;
-}
-
-.scroll1 {
-  top: 67px;
-  left: 0;
-  line-height: 120%;
-  display: inline-block;
-  width: 74px;
-}
-
-.kreed,
-.scroll,
-.scroll1 {
-  position: absolute;
-}
-
-.scroll {
-  top: 687px;
-  left: 683px;
-  width: 74px;
-  height: 83px;
-  text-align: center;
-  font-size: 13px;
-  color: var(--light);
-}
-
-.kreed {
-  top: 0;
-  left: 35.45%;
-  font-weight: 500;
-}
-
-.rectangle-around-logo {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-radius: 6px;
-  background-color: var(--color-white);
-}
-
-.k-icon {
-  position: absolute;
-  height: 45.16%;
-  width: 45.16%;
-  top: 27.42%;
-  right: 25.81%;
-  bottom: 27.42%;
-  left: 29.03%;
-  border-radius: 1px;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-}
-
-.logo,
-.logo1 {
-  position: absolute;
-  height: 83.33%;
-  width: 27.27%;
-  top: 8.33%;
-  right: 72.73%;
-  bottom: 8.33%;
-  left: 0;
-}
-
-.logo {
-  height: 85.71%;
-  width: 9.91%;
-  top: 7.14%;
-  right: 90.09%;
-  bottom: 7.14%;
-  font-size: 24px;
-}
-
-.home-about-us {
-  position: absolute;
-  top: 26.19%;
-  left: 55.41%;
-  font-weight: 500;
-  text-align: right;
-}
-
-.button2 {
-  height: 102.38%;
-  width: 100.77%;
-  top: -1.19%;
-  right: -0.38%;
-  bottom: -1.19%;
-  left: -0.38%;
-  border-radius: var(--br-11xs);
-  border: 1px solid var(--color-white);
-  box-sizing: border-box;
-}
-
-.button2,
-.login,
-.login1 {
-  position: absolute;
-  left: -60px;
-}
-
-.login1 {
-  top: 26.19%;
-  left: -15px;
-  font-weight: 500;
-}
-
-.login {
-  height: 100%;
-  width: 11.71%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 88.29%;
-  text-align: center;
-}
-
-.navigation {
-  position: absolute;
-  top: 30px;
-  left: 165px;
-  width: 1110px;
-  height: 42px;
-}
-
-.hero-13 {
-  position: relative;
-  background-color: var(--color-white);
-  width: 100%;
-  height: 800px;
-  overflow: hidden;
-  text-align: left;
-  font-size: var(--font-size-sm);
-  color: var(--color-white);
-  font-family: var(--font-poppins);
+* {
+  box-sizing: border box;
 }
 
 body {
-  margin: 0;
-  line-height: normal;
+  font-family: 'Poppins', sans-serif;
+  margin: 50px;
+  padding: 0;
+  background-size: cover;
+  background: url(img/Bg_PC.svg) no-repeat center center;
+
 }
 
-:root {
-  /* fonts */
-  --font-poppins: Poppins;
+header {
+  color: #fff;
+  padding: 10px 0;
+}
 
-  /* font sizes */
-  --font-size-sm: 14px;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
 
-  /* Colors */
-  --color-white: #fff;
-  --light: #f8f8fd;
+.nav-menu {
+  list-style: none;
+  display: flex;
+  cursor: pointer;
+}
 
-  /* Border radiuses */
-  --br-11xs: 2px;
-  --br-12xl: 31px;
+.nav-menu li {
+  margin-right: 20px;
+}
+
+.nav-menu a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo-box {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.logo-text {
+  font-size: 24px;
+}
+
+.logo-title {
+  font-size: 24px;
+}
+
+.login-box {
+  border: 1px solid #fff;
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.watch-button {
+  background-color: #00000079;
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+}
+
+.watch-button:hover {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.tekst h1 {
+  color: #fff;
+  font-size: 64px;
+  width: 40%;
+}
+
+.tekst p {
+  color: #fff;
+  font-size: 16px;
+  display: block;
+  width: 40%;
+}
+
+.muis {
+  display: flex;
+  justify-content: center;
 }
 
 @media(max-width:375px) {
