--- a/HeroHeader/kreed.css
+++ b/HeroHeader/kreed.css
@@ -1,14 +1,15 @@
 * {
   box-sizing: border box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
-  margin: 50px;
-  padding: 0;
-  background-size: cover;
-  background: url(img/Bg_PC.svg) no-repeat center center;
-
+  padding-left: 21px;
+  margin-right: 21px;
+  background-color: #71976B;
+  width: 100%;
 }
 
 header {
@@ -36,7 +37,7 @@ nav {
 .nav-menu a {
   text-decoration: none;
   color: #fff;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .logo {
@@ -56,11 +57,11 @@ nav {
 }
 
 .logo-text {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .logo-title {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .login-box {
@@ -80,7 +81,7 @@ img {
   padding: 10px 20px;
   border: none;
   border-radius: 3px;
-  font-size: 14px;
+  font-size: 0.875rem;
   cursor: pointer;
   transition: background-color 0.3s;
 
@@ -90,17 +91,21 @@ img {
   background-color: rgba(0, 0, 0, 0.9);
 }
 
+.tekst {
+  align-items: center;
+  padding-left: 10rem;
+  padding-top: 5rem;
+}
+
 .tekst h1 {
   color: #fff;
-  font-size: 64px;
-  width: 40%;
+  font-size: 4rem;
 }
 
 .tekst p {
   color: #fff;
-  font-size: 16px;
+  font-size: 1rem;
   display: block;
-  width: 40%;
 }
 
 .muis {
@@ -108,35 +113,26 @@ img {
   justify-content: center;
 }
 
-@media(max-width:375px) {
-  img {
+.flex-container {
+  display: flex;
+  justify-content: center;
+}
+
+.skull {
+  width: 120rem;
+  padding-right: 2rem;
+}
+
+@media(max-width:768px), (max-height:1603px) {
+  .flex-container {
     display: flex;
     flex-direction: column;
-  }
-
-  .lorem-ipsum-dolor {
-    padding: 90px 0;
-  }
-
-  .background {
-    width: 375px;
-    height: 795px;
   }
 
 }
 
-@media (max-width: 768px) {
-  img {
-    display: flex;
-    flex-direction: column;
-  }
+@media(max-width:375px), (max-height:1603px) {
+  body {
 
-  .lorem-ipsum-dolor {
-    padding: 90px 0;
-  }
-
-  .background {
-    width: 768px;
-    height: 795px;
   }
 }
